--- a/Self_Paced_Learning_Module.ipynb
+++ b/Self_Paced_Learning_Module.ipynb
@@ -44,7 +44,9 @@
         "\n",
         "**Module 1** lets you first setup Python on your personal computers with Spyder compiler under Anaconda. You will explore the interface of the software and get you familiarize with the functionalities of what you will first see. Afterward, basic Python syntax such as printing of output will be performed. This is followed by learning the different variable types and data structures. At the end of this module, you will execute operations on variables, check the output, and interpret results.\n",
         "\n",
-        "In **Module 2**, control structures are presented. This is essential when you want to perform a series of computations within your data that satisfy a pre-determined set of rules dictated by the user. The use of syntax such if, elif, and else are illustrated on a given scenario. To integrate a sequence of computation with a running index, loop structures are shown. Finally, there are also discussion on how important control statements like break, continue, or pass are used."
+        "In **Module 2**, control structures are presented. This is essential when you want to perform a series of computations within your data that satisfy a pre-determined set of rules dictated by the user. The use of syntax such if, elif, and else are illustrated on a given scenario. To integrate a sequence of computation with a running index, loop structures are shown. Finally, there are also discussion on how important control statements like break, continue, or pass are used.\n",
+        "\n",
+        "In **Module 3**, functions are presented"
       ],
       "metadata": {
         "id": "vy1G60kSqAT8"
@@ -53,7 +55,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Module 1: Python Programming and Basics**\n",
+        "# <font color = \"#7b1113\">**Module 1: Python Programming and Basics**</font>\n",
         "\n",
         "Welcome to Module 1! In this module, you will learn the basics of Python programming, including setting up your environment, understanding Python syntax and indentation, working with variables and data types, and using basic operators. You will be motivated by the story below, finish the module, and answer some activities to solve the problem mentioned herein.\n",
         "\n",
