--- a/Self_Paced_Learning_Module.ipynb
+++ b/Self_Paced_Learning_Module.ipynb
@@ -3087,7 +3087,7 @@
         "## **Learning Outcomes**\n",
         "\n",
         "At the end of this module, you should produce a mini-project that compiles all the subprojects you did previously. Specifically:\n",
-        "1. Compile the subproject as one project;\n",
+        "1. Compile the subprojects as one project;\n",
         "2. Perform some diagnostic tests to see if there are some more errors; and\n",
         "3. Document your code clearly with comments and explanations."
       ],
